kubernetes/apps/observability/cribl-stream/leader/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/appName: "Cribl Stream"
    hajimari.io/icon: mdi:chart-sankey-variant
  labels:
    app.kubernetes.io/instance: cribl-stream
    app.kubernetes.io/name: cribl-stream-leader
  name: cribl-stream-leader
spec:
  ingressClassName: nginx
  rules:
    - host: &host "stream.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: cribl-stream-leader
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
